--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,4 +3,4 @@ include_directories(../myLib)
 set(EXECUTABLE_OUTPUT_PATH ../bin)
 link_directories(../build/lib)
 link_libraries(myLib)
-add_executable(mian ${file})
+add_executable(main ${file})
